--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
         "@babel/preset-react": "7.14.5",
         "babel-jest": "27.0.6",
         "babel-loader": "8.2.2",
+        "enzyme": "3.11.0",
+        "enzyme-adapter-react-16": "1.15.6",
         "eslint": "5.13.0",
         "eslint-config-htmlacademy": "0.5.2",
         "eslint-plugin-react": "7.24.0",
